// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`treeMapGenerator create Treemap nodes create map with fixed root children which include dynamic folders on the one hand and fixed ones at the other 1`] = `
Array [
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 0,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": 0,
    "incomingEdgePoint": Vector3 {
      "x": -200,
      "y": 2,
      "z": -225,
    },
    "isLeaf": false,
    "length": 939.9272667157608,
    "link": undefined,
    "markingColor": undefined,
    "name": "root",
    "outgoingEdgePoint": Vector3 {
      "x": -200,
      "y": 2,
      "z": -175,
    },
    "path": "/root",
    "visible": true,
    "width": 939.9272667157608,
    "x0": 0,
    "y0": 0,
    "z0": 0,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 234.06254235861678,
      "y": 4,
      "z": -101.9614554922677,
    },
    "isLeaf": false,
    "length": 516.9599966936684,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "src",
    "outgoingEdgePoint": Vector3 {
      "x": 234.06254235861678,
      "y": 4,
      "z": 156.51854285456645,
    },
    "path": "/root/src",
    "visible": true,
    "width": 328.9745433505162,
    "x0": 319.57527068335867,
    "y0": 18.798545334315214,
    "z0": 2,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 201.471612955725,
      "y": 6,
      "z": -130.94685805395773,
    },
    "isLeaf": false,
    "length": 342.64527980949134,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "main",
    "outgoingEdgePoint": Vector3 {
      "x": 201.471612955725,
      "y": 6,
      "z": 40.37578185078797,
    },
    "path": "/root/src/main",
    "visible": true,
    "width": 244.65672599624588,
    "x0": 329.14324995760205,
    "y0": 33.39182199366945,
    "z0": 4,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 140.30743145666352,
      "y": 6,
      "z": 205.8978219155722,
    },
    "isLeaf": false,
    "length": 130.53488690611425,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "test",
    "outgoingEdgePoint": Vector3 {
      "x": 262.6357944547865,
      "y": 6,
      "z": 205.8978219155722,
    },
    "path": "/root/src/test",
    "visible": true,
    "width": 244.65672599624588,
    "x0": 329.14324995760205,
    "y0": 390.63037846251507,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "rloc": 80,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 130.1414534777799,
      "y": 506,
      "z": -123.65021972428059,
    },
    "isLeaf": true,
    "length": 313.45872649078285,
    "link": undefined,
    "mapNodeDepth": 2,
    "markingColor": undefined,
    "name": "file1.java",
    "outgoingEdgePoint": Vector3 {
      "x": 130.1414534777799,
      "y": 506,
      "z": 33.079143521110836,
    },
    "path": "/root/src/main/file1.java",
    "visible": true,
    "width": 82.8604484918688,
    "x0": 338.7112292318455,
    "y0": 47.9850986530237,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 80,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 222.56988124389213,
      "y": 506,
      "z": -123.65021972428059,
    },
    "isLeaf": true,
    "length": 313.45872649078285,
    "link": undefined,
    "mapNodeDepth": 2,
    "markingColor": undefined,
    "name": "file2.java",
    "outgoingEdgePoint": Vector3 {
      "x": 222.56988124389213,
      "y": 506,
      "z": 33.079143521110836,
    },
    "path": "/root/src/main/file2.java",
    "visible": true,
    "width": 82.8604484918688,
    "x0": 431.13965699795773,
    "y0": 47.9850986530237,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 65,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 132.53344829634074,
      "y": 506,
      "z": 205.89782191557217,
    },
    "isLeaf": true,
    "length": 101.34833358740565,
    "link": undefined,
    "mapNodeDepth": 2,
    "markingColor": undefined,
    "name": "otherFile.java",
    "outgoingEdgePoint": Vector3 {
      "x": 220.17788642533128,
      "y": 506,
      "z": 205.89782191557217,
    },
    "path": "/root/src/test/otherFile.java",
    "visible": true,
    "width": 175.28887625798103,
    "x0": 338.7112292318455,
    "y0": 405.22365512186934,
    "z0": 6,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 55.47636168262221,
      "y": 4,
      "z": 454.94545003682055,
    },
    "isLeaf": false,
    "length": 281.9781800147283,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "resources",
    "outgoingEdgePoint": Vector3 {
      "x": 290.4581783615624,
      "y": 4,
      "z": 454.94545003682055,
    },
    "path": "/root/resources",
    "visible": true,
    "width": 469.9636333578803,
    "x0": 187.98545334315213,
    "y0": 563.9563600294564,
    "z0": 2,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -29.117092321796235,
      "y": 6,
      "z": 347.7937416312238,
    },
    "isLeaf": false,
    "length": 56.39563600294571,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "textFiles",
    "outgoingEdgePoint": Vector3 {
      "x": 17.879271013991797,
      "y": 6,
      "z": 347.7937416312238,
    },
    "path": "/root/resources/textFiles",
    "visible": true,
    "width": 93.99272667157607,
    "x0": 197.38472601030975,
    "y0": 569.5959236297509,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "rloc": 5,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -25.72302438966217,
      "y": 506,
      "z": 335.4654701705176,
    },
    "isLeaf": true,
    "length": 49.31308584282476,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "file.txt",
    "outgoingEdgePoint": Vector3 {
      "x": -25.72302438966217,
      "y": 506,
      "z": 360.12201309192994,
    },
    "path": "/root/resources/textFiles/file.txt",
    "visible": true,
    "width": 41.98024893318794,
    "x0": 203.28685114374386,
    "y0": 573.1371987098114,
    "z0": 6,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 238.76217869219556,
      "y": 6,
      "z": 528.2597768406499,
    },
    "isLeaf": false,
    "length": 135.34952640706956,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "tables",
    "outgoingEdgePoint": Vector3 {
      "x": 351.5534506980868,
      "y": 6,
      "z": 528.2597768406499,
    },
    "path": "/root/resources/tables",
    "visible": true,
    "width": 225.58254401178255,
    "x0": 432.3665426892499,
    "y0": 710.5850136371151,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 201.99508448040598,
      "y": 506,
      "z": 482.64878244764,
    },
    "isLeaf": true,
    "length": 34.062738481253064,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table1.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 224.4775028297238,
      "y": 506,
      "z": 482.64878244764,
    },
    "path": "/root/resources/tables/table1.xlsx",
    "visible": true,
    "width": 44.964836698635565,
    "x0": 440.7538753057471,
    "y0": 715.6174132070134,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 255.34725379553873,
      "y": 506,
      "z": 482.64878244764,
    },
    "isLeaf": true,
    "length": 34.062738481253064,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table2.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 277.8296721448565,
      "y": 506,
      "z": 482.64878244764,
    },
    "path": "/root/resources/tables/table2.xlsx",
    "visible": true,
    "width": 44.96483669863551,
    "x0": 494.10604462087986,
    "y0": 715.6174132070134,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 308.69942311067143,
      "y": 506,
      "z": 482.64878244764,
    },
    "isLeaf": true,
    "length": 34.062738481253064,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table3.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 331.1818414599892,
      "y": 506,
      "z": 482.64878244764,
    },
    "path": "/root/resources/tables/table3.xlsx",
    "visible": true,
    "width": 44.96483669863562,
    "x0": 547.4582139360125,
    "y0": 715.6174132070134,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 205.8059537172012,
      "y": 506,
      "z": 517.4000162708855,
    },
    "isLeaf": true,
    "length": 25.374930025441586,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table4.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 235.91011054010937,
      "y": 506,
      "z": 517.4000162708855,
    },
    "path": "/root/resources/tables/table4.xlsx",
    "visible": true,
    "width": 60.20831364581636,
    "x0": 440.7538753057471,
    "y0": 754.7125512581648,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 205.8059537172012,
      "y": 506,
      "z": 547.8073458662257,
    },
    "isLeaf": true,
    "length": 25.374930025441586,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table5.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 235.91011054010937,
      "y": 506,
      "z": 547.8073458662257,
    },
    "path": "/root/resources/tables/table5.xlsx",
    "visible": true,
    "width": 60.20831364581636,
    "x0": 440.7538753057471,
    "y0": 785.1198808535048,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 205.8059537172012,
      "y": 506,
      "z": 578.2146754615655,
    },
    "isLeaf": true,
    "length": 25.3749300254417,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table6.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 235.91011054010937,
      "y": 506,
      "z": 578.2146754615655,
    },
    "path": "/root/resources/tables/table6.xlsx",
    "visible": true,
    "width": 60.20831364581636,
    "x0": 440.7538753057471,
    "y0": 815.5272104488447,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 278.0210706805832,
      "y": 506,
      "z": 514.8571999639427,
    },
    "isLeaf": true,
    "length": 40.57859482311153,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table7.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 278.0210706805832,
      "y": 506,
      "z": 535.1464973754985,
    },
    "path": "/root/resources/tables/table7.xlsx",
    "visible": true,
    "width": 37.343098225045026,
    "x0": 509.34952156806065,
    "y0": 754.7125512581648,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 323.7515015221255,
      "y": 506,
      "z": 514.8571999639427,
    },
    "isLeaf": true,
    "length": 40.57859482311153,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table8.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 323.7515015221255,
      "y": 506,
      "z": 535.1464973754985,
    },
    "path": "/root/resources/tables/table8.xlsx",
    "visible": true,
    "width": 37.343098225045196,
    "x0": 555.0799524096029,
    "y0": 754.7125512581648,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 280.11790383470753,
      "y": 506,
      "z": 559.2100944644781,
    },
    "isLeaf": true,
    "length": 17.773097626606614,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table9.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 321.65466836800124,
      "y": 506,
      "z": 559.2100944644781,
    },
    "path": "/root/resources/tables/table9.xlsx",
    "visible": true,
    "width": 83.07352906658747,
    "x0": 509.34952156806065,
    "y0": 800.3235456511748,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 280.11790383470753,
      "y": 506,
      "z": 582.0155916609831,
    },
    "isLeaf": true,
    "length": 17.773097626606727,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table10.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 321.65466836800124,
      "y": 506,
      "z": 582.0155916609831,
    },
    "path": "/root/resources/tables/table10.xlsx",
    "visible": true,
    "width": 83.07352906658747,
    "x0": 509.34952156806065,
    "y0": 823.1290428476797,
    "z0": 6,
  },
]
`;

exports[`treeMapGenerator create Treemap nodes create map with fixed root children which include fixed folders on the one hand and a file at the other 1`] = `
Array [
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 0,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": 0,
    "incomingEdgePoint": Vector3 {
      "x": -200,
      "y": 2,
      "z": -225,
    },
    "isLeaf": false,
    "length": 771.5290039756343,
    "link": undefined,
    "markingColor": undefined,
    "name": "root",
    "outgoingEdgePoint": Vector3 {
      "x": -200,
      "y": 2,
      "z": -175,
    },
    "path": "/root",
    "visible": true,
    "width": 771.5290039756343,
    "x0": 0,
    "y0": 0,
    "z0": 0,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -18.541298807309715,
      "y": 4,
      "z": -57.117749006091444,
    },
    "isLeaf": false,
    "length": 462.9174023853805,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "folder_1_red",
    "outgoingEdgePoint": Vector3 {
      "x": -18.541298807309715,
      "y": 4,
      "z": 174.34095218659883,
    },
    "path": "/root/folder_1_red",
    "visible": true,
    "width": 308.6116015902537,
    "x0": 77.15290039756343,
    "y0": 77.15290039756343,
    "z0": 2,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -80.26361912536046,
      "y": 6,
      "z": -10.826008767553404,
    },
    "isLeaf": false,
    "length": 231.45870119269023,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "folder_1.1_red",
    "outgoingEdgePoint": Vector3 {
      "x": 43.18102151074103,
      "y": 6,
      "z": -10.826008767553404,
    },
    "path": "/root/folder_1_red/folder_1.1_red",
    "visible": true,
    "width": 246.889281272203,
    "x0": 108.0140605565888,
    "y0": 123.44464063610148,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -62.68598454758936,
      "y": 506,
      "z": -62.07294002698762,
    },
    "isLeaf": true,
    "length": 204.98772503773685,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "red_child_1.1.file",
    "outgoingEdgePoint": Vector3 {
      "x": -62.68598454758936,
      "y": 506,
      "z": 40.420922491880816,
    },
    "path": "/root/folder_1_red/folder_1.1_red/red_child_1.1.file",
    "visible": true,
    "width": 132.68009431111255,
    "x0": 120.97396829685438,
    "y0": 136.68012871357817,
    "z0": 6,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 89.47276174927907,
      "y": 6,
      "z": 162.7680171269643,
    },
    "isLeaf": false,
    "length": 46.29174023853807,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "folder_1.2_red",
    "outgoingEdgePoint": Vector3 {
      "x": 89.47276174927907,
      "y": 6,
      "z": 185.91388724623334,
    },
    "path": "/root/folder_1_red/folder_1.2_red",
    "visible": true,
    "width": 30.861160159025417,
    "x0": 324.04218166976636,
    "y0": 401.1950820673298,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "rloc": 6,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 82.6486842794163,
      "y": 506,
      "z": 164.2705662946405,
    },
    "isLeaf": true,
    "length": 40.281543567833126,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "red_child_1.2.file",
    "outgoingEdgePoint": Vector3 {
      "x": 82.6486842794163,
      "y": 506,
      "z": 184.4113380785571,
    },
    "path": "/root/folder_1_red/folder_1.2_red/red_child_1.2.file",
    "visible": true,
    "width": 13.206207438829836,
    "x0": 326.0455805600014,
    "y0": 404.20018040268224,
    "z0": 6,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -76.40597410548229,
      "y": 4,
      "z": 405.7996533792891,
    },
    "isLeaf": false,
    "length": 77.15290039756337,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "folder_2_orange",
    "outgoingEdgePoint": Vector3 {
      "x": 116.4762768884263,
      "y": 4,
      "z": 405.7996533792891,
    },
    "path": "/root/folder_2_orange",
    "visible": true,
    "width": 385.76450198781714,
    "x0": 77.15290039756343,
    "y0": 617.2232031805074,
    "z0": 2,
  },
  Object {
    "attributes": Object {
      "rloc": 10,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -102.94588509417252,
      "y": 502,
      "z": 405.79965337928917,
    },
    "isLeaf": true,
    "length": 67.13590594638856,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "orange.file",
    "outgoingEdgePoint": Vector3 {
      "x": -7.2617496692334385,
      "y": 502,
      "z": 405.79965337928917,
    },
    "path": "/root/folder_2_orange7orange.file",
    "visible": true,
    "width": 191.36827084987817,
    "x0": 99.21204719335792,
    "y0": 622.2317004060949,
    "z0": 2,
  },
]
`;

exports[`treeMapGenerator create Treemap nodes only root node 1`] = `
Array [
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 0,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 48,
      "y": 500,
      "z": -101,
    },
    "isLeaf": true,
    "length": 596,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "root",
    "outgoingEdgePoint": Vector3 {
      "x": 48,
      "y": 500,
      "z": 197,
    },
    "path": "/root",
    "visible": true,
    "width": 596,
    "x0": 0,
    "y0": 0,
    "z0": 0,
  },
]
`;

exports[`treeMapGenerator create Treemap nodes root node with two direct children 1`] = `
Array [
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 0,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 158.1384387633061,
      "y": 2,
      "z": -45.930780618346944,
    },
    "isLeaf": false,
    "length": 816.2768775266122,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "root",
    "outgoingEdgePoint": Vector3 {
      "x": 158.1384387633061,
      "y": 2,
      "z": 362.20765814495917,
    },
    "path": "/root",
    "visible": true,
    "width": 816.2768775266122,
    "x0": 0,
    "y0": 0,
    "z0": 0,
  },
  Object {
    "attributes": Object {
      "functions": 10,
      "mcc": 1,
      "rloc": 100,
    },
    "color": "#DDDDDD",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 92.73843876330608,
      "y": 4,
      "z": -36.33078061834698,
    },
    "isLeaf": true,
    "length": 777.8768775266121,
    "link": "http://www.google.de",
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "big leaf",
    "outgoingEdgePoint": Vector3 {
      "x": 92.73843876330608,
      "y": 4,
      "z": 352.6076581449591,
    },
    "path": "/root/big leaf",
    "visible": true,
    "width": 647.0768775266122,
    "x0": 19.200000000000003,
    "y0": 19.200000000000003,
    "z0": 2,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -69.03078061834697,
      "y": 502,
      "z": 556.6768775266122,
    },
    "isLeaf": true,
    "length": 0,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "Parent Leaf",
    "outgoingEdgePoint": Vector3 {
      "x": 254.50765814495912,
      "y": 502,
      "z": 556.6768775266122,
    },
    "path": "/root/Parent Leaf",
    "visible": true,
    "width": 647.0768775266122,
    "x0": 19.200000000000003,
    "y0": 806.6768775266122,
    "z0": 2,
  },
]
`;

exports[`treeMapGenerator create Treemap nodes root node with two direct children and some grand children 1`] = `
Array [
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 0,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 252.57550765359252,
      "y": 2,
      "z": 1.287753826796262,
    },
    "isLeaf": false,
    "length": 1005.151015307185,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "root",
    "outgoingEdgePoint": Vector3 {
      "x": 252.57550765359252,
      "y": 2,
      "z": 503.8632614803888,
    },
    "path": "/root",
    "visible": true,
    "width": 1005.151015307185,
    "x0": 0,
    "y0": 0,
    "z0": 0,
  },
  Object {
    "attributes": Object {
      "functions": 10,
      "mcc": 1,
      "rloc": 100,
    },
    "color": "#DDDDDD",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -26.612246173203744,
      "y": 4,
      "z": 10.887753826796228,
    },
    "isLeaf": true,
    "length": 966.751015307185,
    "link": "http://www.google.de",
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "big leaf",
    "outgoingEdgePoint": Vector3 {
      "x": -26.612246173203744,
      "y": 4,
      "z": 494.26326148038873,
    },
    "path": "/root/big leaf",
    "visible": true,
    "width": 408.37550765359254,
    "x0": 19.200000000000003,
    "y0": 19.200000000000003,
    "z0": 2,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 400.96326148038884,
      "y": 4,
      "z": 10.887753826796228,
    },
    "isLeaf": false,
    "length": 966.751015307185,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "Parent Leaf",
    "outgoingEdgePoint": Vector3 {
      "x": 400.96326148038884,
      "y": 4,
      "z": 494.26326148038873,
    },
    "path": "/root/Parent Leaf",
    "visible": true,
    "width": 408.3755076535925,
    "x0": 446.77550765359257,
    "y0": 19.200000000000003,
    "z0": 2,
  },
  Object {
    "attributes": Object {
      "functions": 100,
      "mcc": 100,
      "rloc": 30,
    },
    "color": "#820E0E",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 283.2693845669907,
      "y": 6,
      "z": -79.06734770392225,
    },
    "isLeaf": true,
    "length": 265.0653045921555,
    "link": undefined,
    "mapNodeDepth": 2,
    "markingColor": undefined,
    "name": "small leaf",
    "outgoingEdgePoint": Vector3 {
      "x": 417.85713839378695,
      "y": 6,
      "z": -79.06734770392225,
    },
    "path": "/root/Parent Leaf/small leaf",
    "visible": true,
    "width": 269.17550765359243,
    "x0": 465.9755076535926,
    "y0": 38.400000000000006,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "functions": 1000,
      "mcc": 10,
      "rloc": 70,
    },
    "color": "#DDDDDD",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 350.56326148038886,
      "y": 6,
      "z": 233.6867322709129,
    },
    "isLeaf": true,
    "length": 644.0857107150293,
    "link": undefined,
    "mapNodeDepth": 2,
    "markingColor": undefined,
    "name": "other small leaf",
    "outgoingEdgePoint": Vector3 {
      "x": 350.56326148038886,
      "y": 6,
      "z": 555.7295876284276,
    },
    "path": "/root/Parent Leaf/other small leaf",
    "visible": true,
    "width": 269.17550765359243,
    "x0": 465.9755076535926,
    "y0": 322.66530459215556,
    "z0": 4,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 283.2693845669907,
      "y": 504,
      "z": 726.351015307185,
    },
    "isLeaf": true,
    "length": 0,
    "link": undefined,
    "mapNodeDepth": 2,
    "markingColor": undefined,
    "name": "empty folder",
    "outgoingEdgePoint": Vector3 {
      "x": 417.85713839378695,
      "y": 504,
      "z": 726.351015307185,
    },
    "path": "/root/Parent Leaf/empty folder",
    "visible": true,
    "width": 269.17550765359243,
    "x0": 465.9755076535926,
    "y0": 976.351015307185,
    "z0": 4,
  },
]
`;

exports[`treeMapGenerator create Treemap nodes should build the tree map with valid coordinates using the fixed folder structure 1`] = `
Array [
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 0,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": 0,
    "incomingEdgePoint": Vector3 {
      "x": -200,
      "y": 2,
      "z": -225,
    },
    "isLeaf": false,
    "length": 929.3250516799595,
    "link": undefined,
    "markingColor": undefined,
    "name": "root",
    "outgoingEdgePoint": Vector3 {
      "x": -200,
      "y": 2,
      "z": -175,
    },
    "path": "/root",
    "visible": true,
    "width": 929.3250516799595,
    "x0": 0,
    "y0": 0,
    "z0": 0,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -75.75155281000758,
      "y": 4,
      "z": -133.83436854000507,
    },
    "isLeaf": false,
    "length": 139.39875775199394,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "folder_1",
    "outgoingEdgePoint": Vector3 {
      "x": 179.81283640198131,
      "y": 4,
      "z": -133.83436854000507,
    },
    "path": "/root/folder_1",
    "visible": true,
    "width": 511.1287784239778,
    "x0": 46.46625258399798,
    "y0": 46.46625258399798,
    "z0": 2,
  },
  Object {
    "attributes": Object {
      "custom_metric": 2,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -191.17395831557334,
      "y": 504,
      "z": -164.9355199544205,
    },
    "isLeaf": true,
    "length": 124.40460565766179,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "children_1",
    "outgoingEdgePoint": Vector3 {
      "x": -191.17395831557334,
      "y": 504,
      "z": -102.73321712558962,
    },
    "path": "/root/folder_1/children_1",
    "visible": true,
    "width": 0,
    "x0": 58.82604168442666,
    "y0": 53.96332863116404,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "custom_metric": 4,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -191.17395831557334,
      "y": 504,
      "z": -164.9355199544205,
    },
    "isLeaf": true,
    "length": 124.40460565766179,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "children_2",
    "outgoingEdgePoint": Vector3 {
      "x": -191.17395831557334,
      "y": 504,
      "z": -102.73321712558962,
    },
    "path": "/root/folder_1/children_2",
    "visible": true,
    "width": 0,
    "x0": 58.82604168442666,
    "y0": 53.96332863116404,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "custom_metric": 6,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -191.17395831557334,
      "y": 504,
      "z": -164.9355199544205,
    },
    "isLeaf": true,
    "length": 124.40460565766179,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "children_3",
    "outgoingEdgePoint": Vector3 {
      "x": -191.17395831557334,
      "y": 504,
      "z": -102.73321712558962,
    },
    "path": "/root/folder_1/children_3",
    "visible": true,
    "width": 0,
    "x0": 58.82604168442666,
    "y0": 53.96332863116404,
    "z0": 4,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -87.36811595600707,
      "y": 4,
      "z": 98.49689437998484,
    },
    "isLeaf": false,
    "length": 464.6625258399798,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "folder_2",
    "outgoingEdgePoint": Vector3 {
      "x": -87.36811595600707,
      "y": 4,
      "z": 330.8281572999747,
    },
    "path": "/root/folder_2",
    "visible": true,
    "width": 232.3312629199899,
    "x0": 46.46625258399798,
    "y0": 232.33126291998988,
    "z0": 2,
  },
  Object {
    "attributes": Object {
      "custom_metric": 10,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -196.9983497055082,
      "y": 504,
      "z": 110.67555080565477,
    },
    "isLeaf": true,
    "length": 415.9479001372999,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "children_4",
    "outgoingEdgePoint": Vector3 {
      "x": -196.9983497055082,
      "y": 504,
      "z": 318.6495008743047,
    },
    "path": "/root/folder_2/children_4",
    "visible": true,
    "width": 0,
    "x0": 53.0016502944918,
    "y0": 256.6885757713298,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "custom_metric": 0,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -196.9983497055082,
      "y": 504,
      "z": 110.67555080565477,
    },
    "isLeaf": true,
    "length": 415.9479001372999,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "children_5",
    "outgoingEdgePoint": Vector3 {
      "x": -196.9983497055082,
      "y": 504,
      "z": 318.6495008743047,
    },
    "path": "/root/folder_2/children_5",
    "visible": true,
    "width": 0,
    "x0": 53.0016502944918,
    "y0": 256.6885757713298,
    "z0": 4,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 191.4293995479808,
      "y": 4,
      "z": 98.49689437998484,
    },
    "isLeaf": false,
    "length": 464.6625258399798,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "folder_3",
    "outgoingEdgePoint": Vector3 {
      "x": 191.4293995479808,
      "y": 4,
      "z": 330.8281572999747,
    },
    "path": "/root/folder_3",
    "visible": true,
    "width": 232.3312629199899,
    "x0": 325.26376808798585,
    "y0": 232.33126291998988,
    "z0": 2,
  },
  Object {
    "attributes": Object {
      "custom_metric": 4,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 81.79916579847963,
      "y": 504,
      "z": 110.67555080565477,
    },
    "isLeaf": true,
    "length": 415.9479001372999,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "children_6",
    "outgoingEdgePoint": Vector3 {
      "x": 81.79916579847963,
      "y": 504,
      "z": 318.6495008743047,
    },
    "path": "/root/folder_3/children_6",
    "visible": true,
    "width": 0,
    "x0": 331.79916579847963,
    "y0": 256.6885757713298,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "custom_metric": 0,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 81.79916579847963,
      "y": 504,
      "z": 110.67555080565477,
    },
    "isLeaf": true,
    "length": 415.9479001372999,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "children_7",
    "outgoingEdgePoint": Vector3 {
      "x": 81.79916579847963,
      "y": 504,
      "z": 318.6495008743047,
    },
    "path": "/root/folder_3/children_7",
    "visible": true,
    "width": 0,
    "x0": 331.79916579847963,
    "y0": 256.6885757713298,
    "z0": 4,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 400.5275361759717,
      "y": 4,
      "z": 5.564389211988868,
    },
    "isLeaf": false,
    "length": 836.3925465119636,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "folder_4",
    "outgoingEdgePoint": Vector3 {
      "x": 400.5275361759717,
      "y": 4,
      "z": 423.76066246797063,
    },
    "path": "/root/folder_4",
    "visible": true,
    "width": 92.93250516799594,
    "x0": 604.0612835919737,
    "y0": 46.46625258399798,
    "z0": 2,
  },
  Object {
    "attributes": Object {
      "custom_metric": 20,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 356.7956239975085,
      "y": 504,
      "z": 25.327680924274205,
    },
    "isLeaf": true,
    "length": 757.3393796628224,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "children_8",
    "outgoingEdgePoint": Vector3 {
      "x": 356.7956239975085,
      "y": 504,
      "z": 403.9973707556853,
    },
    "path": "/root/folder_4/children_8",
    "visible": true,
    "width": 0,
    "x0": 606.7956239975085,
    "y0": 85.99283600856862,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "custom_metric": 5,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 356.7956239975085,
      "y": 504,
      "z": 25.327680924274205,
    },
    "isLeaf": true,
    "length": 757.3393796628224,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "children_9",
    "outgoingEdgePoint": Vector3 {
      "x": 356.7956239975085,
      "y": 504,
      "z": 403.9973707556853,
    },
    "path": "/root/folder_4/children_9",
    "visible": true,
    "width": 0,
    "x0": 606.7956239975085,
    "y0": 85.99283600856862,
    "z0": 4,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 563.1594202199647,
      "y": 4,
      "z": 5.564389211988868,
    },
    "isLeaf": false,
    "length": 836.3925465119636,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "folder_5",
    "outgoingEdgePoint": Vector3 {
      "x": 563.1594202199647,
      "y": 4,
      "z": 423.76066246797063,
    },
    "path": "/root/folder_5",
    "visible": true,
    "width": 139.3987577519939,
    "x0": 743.4600413439676,
    "y0": 46.46625258399798,
    "z0": 2,
  },
  Object {
    "attributes": Object {
      "custom_metric": 10,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 497.4996473811009,
      "y": 504,
      "z": 25.327680924274205,
    },
    "isLeaf": true,
    "length": 757.3393796628224,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "children_10",
    "outgoingEdgePoint": Vector3 {
      "x": 497.4996473811009,
      "y": 504,
      "z": 403.9973707556853,
    },
    "path": "/root/folder_5/children_10",
    "visible": true,
    "width": 0,
    "x0": 747.4996473811009,
    "y0": 85.99283600856862,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "custom_metric": 0,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 497.4996473811009,
      "y": 504,
      "z": 25.327680924274205,
    },
    "isLeaf": true,
    "length": 757.3393796628224,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "children_11",
    "outgoingEdgePoint": Vector3 {
      "x": 497.4996473811009,
      "y": 504,
      "z": 403.9973707556853,
    },
    "path": "/root/folder_5/children_11",
    "visible": true,
    "width": 0,
    "x0": 747.4996473811009,
    "y0": 85.99283600856862,
    "z0": 4,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -75.75155281000758,
      "y": 4,
      "z": 563.1594202199647,
    },
    "isLeaf": false,
    "length": 139.3987577519939,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "folder_6",
    "outgoingEdgePoint": Vector3 {
      "x": 179.81283640198131,
      "y": 4,
      "z": 563.1594202199647,
    },
    "path": "/root/folder_6",
    "visible": true,
    "width": 511.1287784239778,
    "x0": 46.46625258399798,
    "y0": 743.4600413439676,
    "z0": 2,
  },
  Object {
    "attributes": Object {
      "custom_metric": 1,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -190.3176368260866,
      "y": 504,
      "z": 532.3493368190993,
    },
    "isLeaf": true,
    "length": 123.24033360346118,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "children_12",
    "outgoingEdgePoint": Vector3 {
      "x": -190.3176368260866,
      "y": 504,
      "z": 593.9695036208299,
    },
    "path": "/root/folder_6/children_12",
    "visible": true,
    "width": 0,
    "x0": 59.68236317391339,
    "y0": 751.539253418234,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "custom_metric": 1,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -190.3176368260866,
      "y": 504,
      "z": 532.3493368190993,
    },
    "isLeaf": true,
    "length": 123.24033360346118,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "children_13",
    "outgoingEdgePoint": Vector3 {
      "x": -190.3176368260866,
      "y": 504,
      "z": 593.9695036208299,
    },
    "path": "/root/folder_6/children_13",
    "visible": true,
    "width": 0,
    "x0": 59.68236317391339,
    "y0": 751.539253418234,
    "z0": 4,
  },
]
`;
